tests/ShouldFail/bad_start_proof.8pus
Theorem easyimpl1 : A -> A.
Proof.
    intro x.
Qed.
Theorem easyimpl2 : A -> A.
Proof.
    intro x.
    trivial.
Qed.